infra/base/image-updater-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/managed-by: openshift-gitops
    app.kubernetes.io/name: openshift-gitops-argocd-image-updater-controller
    app.kubernetes.io/part-of: argocd
  name: openshift-gitops-argocd-image-updater-controller
  namespace: openshift-gitops
spec:
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 8082
  selector:
    app.kubernetes.io/name: openshift-gitops-argocd-image-updater-controller
