infra/base/image-updater-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app.kubernetes.io/component: controller
    app.kubernetes.io/managed-by: openshift-gitops
    app.kubernetes.io/name: openshift-gitops-argocd-image-updater-controller
    app.kubernetes.io/part-of: argocd
  name: openshift-gitops-argocd-image-updater-controller
  namespace: openshift-gitops
spec:
  host: argocd-image-updater.apps.uthtest1.sandbox694.opentlc.com
  port:
    targetPort: 8082
  to:
    kind: Service
    name: openshift-gitops-argocd-image-updater-controller
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
